--- a/styles.css
+++ b/styles.css
@@ -17,31 +17,39 @@ footer {
 }
 
 .w {
-
+  background-image: url(images/crash.png);
+  cursor:pointer;
+   
 }
 
 .a {
-
+  background-image: url(images/crash.png);
+  cursor:pointer;
 }
 
 .s {
-
+  background-image: url(images/kick.png);
+  cursor:pointer;
 }
 
 .d {
-
+  background-image: url(images/snare.png);
+  cursor:pointer;
 }
 
 .j {
-
+  background-image: url(images/tom1.png);
+  cursor:pointer;
 }
 
 .k {
-
+  background-image: url(images/tom2.png);
+  cursor:pointer;
 }
 
 .l {
-
+  background-image: url(images/tom3.png);
+  cursor:pointer;
 }
 
 .set {
